--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -793,8 +793,7 @@
    "source": [
     "top_travel_cities.pop()\n",
     "top_travel_cities.append('San Antonio')\n",
-    "top_travel_cities\n",
-    "top_travel_cities.append)"
+    "top_travel_cities"
    ]
   },
   {
