--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -765,14 +765,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solta',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Salina Island',\n",
+       " 'Toronto',\n",
+       " 'San Antonio']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_travel_cities.pop()\n",
     "top_travel_cities.append('San Antonio')\n",
     "top_travel_cities\n",
-    "top_travel_cities.append('Pyeongchang')"
+    "top_travel_cities.append)"
    ]
   },
   {
