--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -765,39 +765,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
-       " 'Buenos Aires',\n",
-       " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'San Antonio',\n",
-       " 'San Antonio',\n",
-       " 'Pyeongchang']"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "top_travel_cities.pop()\n",
     "top_travel_cities.append('San Antonio')\n",
     "top_travel_cities\n",
-    "top_travel_cities.append('Pyeongchang')\n",
-    "top_travel_cities"
+    "top_travel_cities.append('Pyeongchang')"
    ]
   },
   {
